fixed spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ nav {
     display:flex;
     align-items: center;
     justify-content: center;
-    margin: -17px; 
+    margin: -28px; 
     animation: fadein 3s; 
 }
 @keyframes fadein {
@@ -94,7 +94,7 @@ nav {
     font-size: 13px;
     letter-spacing: 2px;
     background-color: #4BD9A9;
-    margin-right: 32px;
+    margin-right: 30px;
     border-radius: 4px;
 }
 .icons:visited {
